--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -224,7 +224,7 @@ p {
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center center;
-  font-family: marker;
+ 
 }
 
 .banner-content {
@@ -246,10 +246,11 @@ p {
   font-weight: 700;
   text-transform: uppercase;
   text-shadow: .5px .5px 5.5px #FFFF33;
-  color: #fff;
+  color: #339933;
   letter-spacing: 2px;
   margin-top: 0px;
   margin-bottom: 30px;
+  
 }
 
 .banner-content ul {
