--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -206,17 +206,18 @@ p {
 }
 .menu-first ul li.active a {
   color: #fff;
-  background-color: #f2745f;
+  
 }
 
 .navbar-inverse .navbar-nav>li>a:hover, .navbar-inverse .navbar-nav>li>a:focus {
-  color: #7a7a7a;
+  color: #00FF66;
+  font-size: 22px;
+  text-style: bold;
 }
 
 .navbar-inverse .navbar-toggle {
-  border-color: #f2745f;
-  background-color: #f2745f;
-  right: 15px;
+  border-color: #66FF66;
+  right: 15px;  right: 15px;
 }
 
 .banner {
@@ -224,7 +225,8 @@ p {
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center center;
- 
+  color: #00FF00;
+  background-color: #fff;
 }
 
 .banner-content {
@@ -234,7 +236,8 @@ p {
 
 .banner-content h6 {
   font-size: 18px;
-  color: #fff;
+  color: #333333;
+  text-shadow: .5px .5px 2.5px #00FF00;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -294,11 +297,12 @@ p {
 
 #about {
   padding: 0px;
-  background-image: url(../img/services-bg.jpg);
+  background-image: url(../img/services-bg.png);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   background-position: center center;
   background-attachment: fixed;
+  background-color: #FFFFFF;
 }
 
 #about .service-item {
@@ -369,6 +373,7 @@ margin-top: -80px;
 
 .what-we-do .tabs .active .list-item {
   color: #fff!important;
+  box-shadow: 0 0 6px #339933;
 }
 
 
