--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -242,7 +242,7 @@ p {
 }
 
 .banner-content h6 {
-  font-size: 18px;
+  font-size: 28px;
   color: #333333;
   text-shadow: .5px .5px 2.5px #00FF00;
   font-weight: 700;
@@ -252,11 +252,11 @@ p {
 }
 
 .banner-content h2 {
-  font-size: 80px;
+  font-size: 88px;
   font-weight: 700;
   text-transform: uppercase;
-  text-shadow: .5px .5px 5.5px #FFFF33;
-  color: #339933;
+  text-shadow: .5px .5px 5.5px #00FF00;
+  color: #000000;
   letter-spacing: 2px;
   margin-top: 0px;
   margin-bottom: 30px;
