--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -232,8 +232,9 @@ p {
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center center;
-  color: #00FF00;
+  color: black;
   background-color: #fff;
+  text-shadow: .5px .5px 2.5px #00FF00;
 }
 
 .banner-content {
