--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -228,7 +228,7 @@ p {
 }
 
 .banner {
-  background-image: url(../img/banner-bg.jpg);
+  background-image: url(../img/Haybalesunset.jpg);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center center;
